<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example1.example1.mpos.mPOSDemo.CardOperations">

    <Button
        android:id="@+id/init"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClicks"
        android:text="@string/init" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnVersion"
        android:onClick="btnClicks"
        android:text="@string/btnGetVersion"/>

    <Button
        android:id="@+id/btnbattery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClicks"
        android:text="@string/btnbattery" />

    <Button
        android:id="@+id/btninsert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClicks"
        android:text="@string/btninsert" />

    <Button
        android:id="@+id/btncardinformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClicks"
        android:text="@string/btncardinformation" />
    <Button
        android:id="@+id/btnemvdata"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClicks"
        android:text="@string/btnemvdata" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSendData"
        android:text="@string/btnSendData"/>

    <EditText
        android:id="@+id/txtvalues"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
